// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Setup Environment during an error should match the snapshot on file (styles) 1`] = `
.c0 {
  background-color: #006600;
  height: 50px;
  padding: 2px;
  padding-left: 10px;
}

.c0 .action {
  cursor: pointer;
}

.c0 .fit {
  padding-left: 3px !important;
  padding-right: 3px !important;
}

.c0 .header-hidden {
  display: none;
}

.c2 {
  height: 50px;
  width: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #006600;
}

.c1 {
  color: #FFFFFF;
}

.c3 {
  margin-top: calc(50px + 26px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .nav-tabs {
  height: 28px !important;
  font-size: 0.75em;
}

.c3 a[role="tab"] {
  padding-bottom: 0px;
  padding-top: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px;
  border-style: solid;
  border-width: 1px;
  border-color: #000000;
}

.c5 {
  width: 100%;
  margin-left: 10px;
  margin-right: 10px;
  text-align: center;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  list-style-position: outside;
  overflow: scroll;
  max-height: 200px;
  border-style: solid;
  border-color: #808080;
  border-width: 10px;
}

.c7 {
  padding-left: 0px;
  min-width: 200px;
  background: #808080;
  padding: 0px;
}

.c7 li:last-child {
  margin-bottom: 0px;
}

<div>
  <nav
    class="c0 navbar navbar-expand navbar-dark fixed-top"
  >
    <span
      class="navbar-brand"
    >
      <div
        class="action"
      >
        <div
          class="header-hidden"
        >
          Panic
        </div>
        <div
          class="header-visible"
        >
          Panic: mockHeaderTitle
        </div>
      </div>
    </span>
    <div
      class="mr-auto navbar-nav"
    />
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class=""
          data-testid="info-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class=""
          data-testid="home-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class=""
          data-testid="stores-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 4H4v2h16V4zm1 10v-2l-1-5H4l-1 5v2h1v6h10v-6h4v6h2v-6h1zm-9 4H6v-4h6v4z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class=""
          data-testid="shelves-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M18 2.01L6 2c-1.1 0-2 .89-2 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.11-.9-1.99-2-1.99zM18 20H6v-9.02h12V20zm0-11H6V4h12v5zM8 5h2v3H8zm0 7h2v5H8z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class="c1"
          data-testid="list-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M2 17h2v.5H3v1h1v.5H2v1h3v-4H2v1zm1-9h1V4H2v1h1v3zm-1 3h1.8L2 13.1v.9h3v-1H3.2L5 10.9V10H2v1zm5-6v2h14V5H7zm0 14h14v-2H7v2zm0-6h14v-2H7v2z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class="c2"
          data-testid="AddIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </div>
      </div>
    </div>
  </nav>
  <div
    class="c3"
  >
    <div
      class="c4"
    >
      <div
        class="c5 alert alert-success"
      >
        mockTitle
      </div>
      <div
        class="c6 overflow-auto"
        size="200"
      >
        <div
          class="c7"
        >
          <div>
            MockListItem
          </div>
          <div>
            MockListItem
          </div>
          <div>
            MockListItem
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    MockAlert
  </div>
  <div>
    MockHelp
  </div>
  s
</div>
`;

exports[`Setup Environment outside of an error inside of a transaction should match the snapshot on file (styles) 1`] = `
.c0 {
  background-color: #006600;
  height: 50px;
  padding: 2px;
  padding-left: 10px;
}

.c0 .action {
  cursor: pointer;
}

.c0 .fit {
  padding-left: 3px !important;
  padding-right: 3px !important;
}

.c0 .header-hidden {
  display: none;
}

.c2 {
  height: 50px;
  width: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #006600;
}

.c1 {
  color: #FFFFFF;
}

.c3 {
  margin-top: calc(50px + 26px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .nav-tabs {
  height: 28px !important;
  font-size: 0.75em;
}

.c3 a[role="tab"] {
  padding-bottom: 0px;
  padding-top: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px;
  border-style: solid;
  border-width: 1px;
  border-color: #000000;
}

.c5 {
  width: 100%;
  margin-left: 10px;
  margin-right: 10px;
  text-align: center;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  list-style-position: outside;
  overflow: scroll;
  max-height: 200px;
  border-style: solid;
  border-color: #808080;
  border-width: 10px;
}

.c7 {
  padding-left: 0px;
  min-width: 200px;
  background: #808080;
  padding: 0px;
}

.c7 li:last-child {
  margin-bottom: 0px;
}

<div>
  <nav
    class="c0 navbar navbar-expand navbar-dark fixed-top"
  >
    <span
      class="navbar-brand"
    >
      <div
        class="action"
      >
        <div
          class="header-hidden"
        >
          Panic
        </div>
        <div
          class="header-visible"
        >
          Panic: mockHeaderTitle
        </div>
      </div>
    </span>
    <div
      class="mr-auto navbar-nav"
    />
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class=""
          data-testid="info-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class=""
          data-testid="home-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class=""
          data-testid="stores-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 4H4v2h16V4zm1 10v-2l-1-5H4l-1 5v2h1v6h10v-6h4v6h2v-6h1zm-9 4H6v-4h6v4z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class=""
          data-testid="shelves-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M18 2.01L6 2c-1.1 0-2 .89-2 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.11-.9-1.99-2-1.99zM18 20H6v-9.02h12V20zm0-11H6V4h12v5zM8 5h2v3H8zm0 7h2v5H8z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class="c1"
          data-testid="list-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M2 17h2v.5H3v1h1v.5H2v1h3v-4H2v1zm1-9h1V4H2v1h1v3zm-1 3h1.8L2 13.1v.9h3v-1H3.2L5 10.9V10H2v1zm5-6v2h14V5H7zm0 14h14v-2H7v2zm0-6h14v-2H7v2z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class="c2"
          data-testid="AddIcon"
        >
          <div
            class="spinner-border spinner-border-sm"
          />
        </div>
      </div>
    </div>
  </nav>
  <div
    class="c3"
  >
    <div
      class="c4"
    >
      <div
        class="c5 alert alert-success"
      >
        mockTitle
      </div>
      <div
        class="c6 overflow-auto"
        size="200"
      >
        <div
          class="c7"
        >
          <div>
            MockListItem
          </div>
          <div>
            MockListItem
          </div>
          <div>
            MockListItem
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    MockAlert
  </div>
  <div>
    MockHelp
  </div>
  s
</div>
`;

exports[`Setup Environment outside of an error outside of a transaction with wait for api engaged should match the snapshot on file (styles) 1`] = `
.c0 {
  background-color: #006600;
  height: 50px;
  padding: 2px;
  padding-left: 10px;
}

.c0 .action {
  cursor: pointer;
}

.c0 .fit {
  padding-left: 3px !important;
  padding-right: 3px !important;
}

.c0 .header-hidden {
  display: none;
}

.c2 {
  height: 50px;
  width: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #006600;
}

.c1 {
  color: #FFFFFF;
}

.c3 {
  margin-top: calc(50px + 26px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .nav-tabs {
  height: 28px !important;
  font-size: 0.75em;
}

.c3 a[role="tab"] {
  padding-bottom: 0px;
  padding-top: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px;
  border-style: solid;
  border-width: 1px;
  border-color: #000000;
}

.c5 {
  width: 100%;
  margin-left: 10px;
  margin-right: 10px;
  text-align: center;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  list-style-position: outside;
  overflow: scroll;
  max-height: 200px;
  border-style: solid;
  border-color: #808080;
  border-width: 10px;
}

.c7 {
  padding-left: 0px;
  min-width: 200px;
  background: #808080;
  padding: 0px;
}

.c7 li:last-child {
  margin-bottom: 0px;
}

<div>
  <nav
    class="c0 navbar navbar-expand navbar-dark fixed-top"
  >
    <span
      class="navbar-brand"
    >
      <div
        class="action"
      >
        <div
          class="header-hidden"
        >
          Panic
        </div>
        <div
          class="header-visible"
        >
          Panic: mockHeaderTitle
        </div>
      </div>
    </span>
    <div
      class="mr-auto navbar-nav"
    />
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class=""
          data-testid="info-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class=""
          data-testid="home-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class=""
          data-testid="stores-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 4H4v2h16V4zm1 10v-2l-1-5H4l-1 5v2h1v6h10v-6h4v6h2v-6h1zm-9 4H6v-4h6v4z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class=""
          data-testid="shelves-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M18 2.01L6 2c-1.1 0-2 .89-2 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.11-.9-1.99-2-1.99zM18 20H6v-9.02h12V20zm0-11H6V4h12v5zM8 5h2v3H8zm0 7h2v5H8z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class="c1"
          data-testid="list-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M2 17h2v.5H3v1h1v.5H2v1h3v-4H2v1zm1-9h1V4H2v1h1v3zm-1 3h1.8L2 13.1v.9h3v-1H3.2L5 10.9V10H2v1zm5-6v2h14V5H7zm0 14h14v-2H7v2zm0-6h14v-2H7v2z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class="c2"
          data-testid="AddIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </div>
      </div>
    </div>
  </nav>
  <div
    class="c3"
  >
    <div
      class="c4"
    >
      <div
        class="c5 alert alert-success"
      >
        mockTitle
      </div>
      <div
        class="c6 overflow-auto"
        size="200"
      >
        <div
          class="c7"
        >
          <div>
            MockListItem
          </div>
          <div>
            MockListItem
          </div>
          <div>
            MockListItem
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    MockAlert
  </div>
  <div>
    MockHelp
  </div>
  s
</div>
`;

exports[`Setup Environment outside of an error outside of a transaction with wait for api not engaged with items in the inventory should match the snapshot on file (styles) 1`] = `
.c0 {
  background-color: #006600;
  height: 50px;
  padding: 2px;
  padding-left: 10px;
}

.c0 .action {
  cursor: pointer;
}

.c0 .fit {
  padding-left: 3px !important;
  padding-right: 3px !important;
}

.c0 .header-hidden {
  display: none;
}

.c2 {
  height: 50px;
  width: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #006600;
}

.c1 {
  color: #FFFFFF;
}

.c3 {
  margin-top: calc(50px + 26px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .nav-tabs {
  height: 28px !important;
  font-size: 0.75em;
}

.c3 a[role="tab"] {
  padding-bottom: 0px;
  padding-top: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px;
  border-style: solid;
  border-width: 1px;
  border-color: #000000;
}

.c5 {
  width: 100%;
  margin-left: 10px;
  margin-right: 10px;
  text-align: center;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  list-style-position: outside;
  overflow: scroll;
  max-height: 200px;
  border-style: solid;
  border-color: #808080;
  border-width: 10px;
}

.c7 {
  padding-left: 0px;
  min-width: 200px;
  background: #808080;
  padding: 0px;
}

.c7 li:last-child {
  margin-bottom: 0px;
}

<div>
  <nav
    class="c0 navbar navbar-expand navbar-dark fixed-top"
  >
    <span
      class="navbar-brand"
    >
      <div
        class="action"
      >
        <div
          class="header-hidden"
        >
          Panic
        </div>
        <div
          class="header-visible"
        >
          Panic: mockHeaderTitle
        </div>
      </div>
    </span>
    <div
      class="mr-auto navbar-nav"
    />
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class=""
          data-testid="info-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class=""
          data-testid="home-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class=""
          data-testid="stores-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 4H4v2h16V4zm1 10v-2l-1-5H4l-1 5v2h1v6h10v-6h4v6h2v-6h1zm-9 4H6v-4h6v4z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class=""
          data-testid="shelves-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M18 2.01L6 2c-1.1 0-2 .89-2 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.11-.9-1.99-2-1.99zM18 20H6v-9.02h12V20zm0-11H6V4h12v5zM8 5h2v3H8zm0 7h2v5H8z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class="c1"
          data-testid="list-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M2 17h2v.5H3v1h1v.5H2v1h3v-4H2v1zm1-9h1V4H2v1h1v3zm-1 3h1.8L2 13.1v.9h3v-1H3.2L5 10.9V10H2v1zm5-6v2h14V5H7zm0 14h14v-2H7v2zm0-6h14v-2H7v2z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class="c2"
          data-testid="AddIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </div>
      </div>
    </div>
  </nav>
  <div
    class="c3"
  >
    <div
      class="c4"
    >
      <div
        class="c5 alert alert-success"
      >
        mockTitle
      </div>
      <div
        class="c6 overflow-auto"
        size="200"
      >
        <div
          class="c7"
        >
          <div>
            MockListItem
          </div>
          <div>
            MockListItem
          </div>
          <div>
            MockListItem
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    MockAlert
  </div>
  <div>
    MockHelp
  </div>
  s
</div>
`;

exports[`Setup Environment outside of an error outside of a transaction with wait for api not engaged with no items in the inventory should match the snapshot on file (styles) 1`] = `
.c0 {
  background-color: #006600;
  height: 50px;
  padding: 2px;
  padding-left: 10px;
}

.c0 .action {
  cursor: pointer;
}

.c0 .fit {
  padding-left: 3px !important;
  padding-right: 3px !important;
}

.c0 .header-hidden {
  display: none;
}

.c2 {
  height: 50px;
  width: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #006600;
}

.c1 {
  color: #FFFFFF;
}

.c3 {
  margin-top: calc(50px + 26px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .nav-tabs {
  height: 28px !important;
  font-size: 0.75em;
}

.c3 a[role="tab"] {
  padding-bottom: 0px;
  padding-top: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px;
  border-style: solid;
  border-width: 1px;
  border-color: #000000;
}

.c5 {
  width: 100%;
  margin-left: 10px;
  margin-right: 10px;
  text-align: center;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  list-style-position: outside;
  overflow: scroll;
  max-height: 200px;
  border-style: solid;
  border-color: #808080;
  border-width: 10px;
}

.c7 {
  padding-left: 0px;
  min-width: 200px;
  background: #808080;
  padding: 0px;
}

.c7 li:last-child {
  margin-bottom: 0px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  min-height: 40px;
  background: #FFFFFF;
  padding: 12px;
  min-width: 220px;
  color: #006600;
  margin-bottom: 0px;
}

<div>
  <nav
    class="c0 navbar navbar-expand navbar-dark fixed-top"
  >
    <span
      class="navbar-brand"
    >
      <div
        class="action"
      >
        <div
          class="header-hidden"
        >
          Panic
        </div>
        <div
          class="header-visible"
        >
          Panic: mockHeaderTitle
        </div>
      </div>
    </span>
    <div
      class="mr-auto navbar-nav"
    />
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class=""
          data-testid="info-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class=""
          data-testid="home-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class=""
          data-testid="stores-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 4H4v2h16V4zm1 10v-2l-1-5H4l-1 5v2h1v6h10v-6h4v6h2v-6h1zm-9 4H6v-4h6v4z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class=""
          data-testid="shelves-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M18 2.01L6 2c-1.1 0-2 .89-2 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.11-.9-1.99-2-1.99zM18 20H6v-9.02h12V20zm0-11H6V4h12v5zM8 5h2v3H8zm0 7h2v5H8z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class="c1"
          data-testid="list-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M2 17h2v.5H3v1h1v.5H2v1h3v-4H2v1zm1-9h1V4H2v1h1v3zm-1 3h1.8L2 13.1v.9h3v-1H3.2L5 10.9V10H2v1zm5-6v2h14V5H7zm0 14h14v-2H7v2zm0-6h14v-2H7v2z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="navbar-nav"
    >
      <div
        class="nav-link action nav-item"
      >
        <div
          class="c2"
          data-testid="AddIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </div>
      </div>
    </div>
  </nav>
  <div
    class="c3"
  >
    <div
      class="c4"
    >
      <div
        class="c5 alert alert-success"
      >
        mockTitle
      </div>
      <div
        class="c6 overflow-auto"
        size="200"
      >
        <div
          class="c7"
        >
          <li
            class="c8"
          >
            I'm Right Here
          </li>
        </div>
      </div>
    </div>
  </div>
  <div>
    MockAlert
  </div>
  <div>
    MockHelp
  </div>
  s
</div>
`;
